--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//MySQL
