--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0" // queryDsl version 정보 추가
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
@@ -46,6 +52,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	//Gson - MM webhook
 	implementation 'com.google.code.gson:gson:2.9.0'
+	// queryDsl
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 }
 
 tasks.named('test') {
