BE_221020_mission : 백문백답, 일반게시글 초안 (완료)
Former-commit-id: 924a94da8b37405aa15a27b99f1f3ff2860c6826

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.profiles.include=secret
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+logging.level.com.zaxxer.hikari.HikariConfig: DEBUG
+logging.level.com.zaxxer.hikari: TRACE
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
