--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=none
 ##logging.level.org.hibernate.type.descriptor.sql=trace
 ##spring.jpa.properties.hibernate.format_sql=true
 
+logging.level.com.zaxxer.hikari.HikariConfig: DEBUG
+logging.level.com.zaxxer.hikari: TRACE
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
