BE_221020_missions : 미션 관련 API (완료)
Former-commit-id: 4f41e7a468e1beed9d302a5283c0f615cf49f315

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//MySQL
@@ -55,6 +55,8 @@ dependencies {
 	// queryDsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 }
 
 tasks.named('test') {
