--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -86,6 +86,8 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	// https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
 	implementation 'com.google.firebase:firebase-admin:9.1.0'
+	//s3
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
 }
 
 dependencyManagement {
