--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 ##logging.level.org.hibernate.type.descriptor.sql=trace
 ##spring.jpa.properties.hibernate.format_sql=true
 
+spring.servlet.multipart.maxFileSize=20MB
+spring.servlet.multipart.maxRequestSize=20MB
+
+
