--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,4 +63,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.20.1'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.20.1'
+    implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.20.1'
 }
