BE_221102_Error : response 관련 수정 (완료)
Former-commit-id: b01c99187256ad90c1d706f4bed38c019c0adcdf

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=20MB
 
-
+server.error.include-message=always
+server.error.include-exception=true
+server.error.include-binding-errors=always
