--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
 
     // glide 관련 (안드로이드에서 이미지를 빠르고 효율적으로 불러올 수 있게 도와주는 라이브러리)
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 }
