--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+            <nav-graph android:value="@navigation/bottom_bar_nav_graph"></nav-graph>
         </activity>
 
         <service
