--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,5 +93,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
 
-
+    implementation project(':unityLibrary')
+    implementation fileTree(dir: project(':unityLibrary').getProjectDir().toString() + ('\\libs'), include: ['*.jar'])
 }
