FE_221111_build : 홈 빌드 해결중
Former-commit-id: 56e031047c9c20354136cc4d5a468f77ac4fcf87

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,15 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/notification_channel_id" />
 
+        <meta-data
+            android:name="unityplayer.UnityActivity"
+            android:value="true" />
+        <meta-data
+            android:name="android.notch_support"
+            android:value="true" />
+
+        <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -59,12 +68,6 @@
             android:process=":UnityKillsMe"
             tools:replace="android:screenOrientation"
             >
-            <meta-data
-                android:name="unityplayer.UnityActivity"
-                android:value="true" />
-            <meta-data
-                android:name="android.notch_support"
-                android:value="true" />
         </activity>
         <service
             android:name="com.ssafy.zip.android.MyFirebaseMessagingService"
