BE_221113_character : character 관련 가족 정보 조회 수정
Former-commit-id: cedcb827d11beca911a0782867a45ec5e49b2d8e

--- a/backend/local.properties
+++ b/backend/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 13 02:14:50 KST 2022
-sdk.dir=C\:\\Program Files\\Unity\\Hub\\Editor\\2021.3.9f1\\Editor\\Data\\PlaybackEngines\\AndroidPlayer\\SDK
+#sdk.dir=C\:\\Program Files\\Unity\\Hub\\Editor\\2021.3.9f1\\Editor\\Data\\PlaybackEngines\\AndroidPlayer\\SDK
